--- a/package.json
+++ b/package.json
@@ -3,9 +3,24 @@
   "version": "1.0.0",
   "description": "netfilx-clone",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.4",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.3",
+    "nodemailer": "^6.9.9",
+    "nodemon": "^3.0.3",
+    "stripe": "^14.17.0",
+    "validator": "^13.11.0"
+  }
 }
